Converted to gradle project